Modifs HTML et ajout CSS
Début de grid

--- a/theme/index.html
+++ b/theme/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Just a couple things</title>
+    <link rel="stylesheet" href="css/knacss.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <!-- /////////////////////////////////////////////////////
+            HEADER
+    ///////////////////////////////////////////////////// -->
     <header>
       <h1>Just a couple things</h1>
       <nav>
@@ -21,31 +26,133 @@
     </header>
 
     <main>
+      <!-- /////////////////////////////////////////////////////
+              A LA UNE
+      ///////////////////////////////////////////////////// -->
       <section id="alaune">
         <article class="big">
-          <h2>Un repas de fête vegan</h2>          
+          <h1>Un repas de fête vegan</h1>
+          <p class="date">21 janvier 2018 | 2 commentaires</p>
+          <button type="button" name="button">Lire l'article</button>
         </article>
       </section>
-      <section>
-        <h2>Catégories</h2>
+
+      <!-- /////////////////////////////////////////////////////
+              CATEGORIES
+      ///////////////////////////////////////////////////// -->
+      <section id="categories">
+
+        <!-- Culturez-moi -->
         <div class="cat">
-          <h3>Culturez-moi</h3>
+          <div class="intro">
+            <h3>Culturez-moi</h3>
+            <p class="desc">
+              La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
+            </p>
+          </div>
+          <article class="cat-big">
+            <h1>5 séries feel good pour décompresser</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <article class="cat-sm">
+            <h1>Atlanta, la douce pêche</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <article class="cat-sm">
+            <h1>Un week-end, huit films</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <button type="button" name="button">Découvrir plus</button>
         </div>
+
+        <!-- Culturez-moi -->
         <div class="cat">
-          <h3>Enfants de l'internet</h3>
+          <div class="intro">
+            <h3>Enfants de l'internet</h3>
+            <p class="desc">
+              Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
+            </p>
+          </div>
+          <article class="cat-big">
+            <h1>Ces 7 applis indispensables au quotidien</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <article class="cat-sm">
+            <h1>Ces chaînes Youtube féministes que j'adore</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <button type="button" name="button">Découvrir plus</button>
         </div>
+
+        <!-- Lifestyle -->
         <div class="cat">
-          <h3>Lifestyle</h3>
+          <div class="intro">
+            <h3>Lifestyle</h3>
+            <p class="desc">
+              Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
+            </p>
+          </div>
+          <article class="cat-big">
+            <h1>Un repas de fête vegan</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <article class="cat-sm">
+            <h1>Des musiques pour chiller en toute tranquilité</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <article class="cat-sm">
+            <h1>Miracle Morning, mon avis</h1>
+            <p class="date">12 novembre 2017 | 0 commentaire</p>
+          </article>
+          <button type="button" name="button">Découvrir plus</button>
         </div>
       </section>
-      <section>
-        <h3>Wanderlust</h3>
+
+      <!-- Wanderlust -->
+      <section id="wanderlust">
+        <div class="intro">
+          <h2>Wanderlust</h2>
+          <p class="desc">
+            Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
+          </p>
+        </div>
+        <article class="wanderlust">
+          <h1>Un automne au Québec</h1>
+        </article>
+        <article class="wanderlust">
+          <h1>Roadtrip à l'Est</h1>
+          <ul>
+            <li><h3>Partie 1 : Allemagne nous voilà</h3></li>
+            <li><h3>Partie 2 : No Kangaroo in Austria</h3></li>
+            <li><h3>Partie 3 : La Slovénie ? On dit oui !</h3></li>
+            <li><h3>Partie 4 : Vérone et Annecy</h3></li>
+          </ul>
+        </article>
+        <button type="button" name="button">Découvrir plus</button>
       </section>
-      <section>
+
+      <!-- /////////////////////////////////////////////////////
+              TOUS LES ARTICLES
+      ///////////////////////////////////////////////////// -->
+      <section id="all-articles">
         <h2>Tous les articles</h2>
         <article class="article">
-          <h3>5 séries feel good</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h1>5 séries feel good</h1>
+          <p class="date">Culturez-moi | 21 janvier 2018 | 2 commentaires</p>
+          <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+          <button type="button" name="button">Lire l'article</button>
+        </article>
+        <article class="article">
+          <h1>Un repas de fête vegan</h1>
+          <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
+          <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+          <button type="button" name="button">Lire l'article</button>
+        </article>
+        <article class="article">
+          <h1>Des musiques pour chiller en toute tranquilité</h1>
+          <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
+          <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+          <button type="button" name="button">Lire l'article</button>
         </article>
       </section>
       <aside class="bio">
