--- a/theme/index.html
+++ b/theme/index.html
@@ -51,7 +51,7 @@
             </p>
           </div>
           <article class="cat-big">
-            <h1>5 séries feel good pour décompresser</h1>
+            <h1>5 séries feel good parfaites pour décompresser</h1>
             <p class="date">12 novembre 2017 | 0 commentaire</p>
           </article>
           <article class="cat-sm">
@@ -137,7 +137,7 @@
       <section id="all-articles">
         <h2>Tous les articles</h2>
         <article class="article">
-          <h1>5 séries feel good</h1>
+          <h1>5 séries feel good parfaites pour décompresser</h1>
           <p class="date">Culturez-moi | 21 janvier 2018 | 2 commentaires</p>
           <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
           <button type="button" name="button">Lire l'article</button>
@@ -145,13 +145,21 @@
         <article class="article">
           <h1>Un repas de fête vegan</h1>
           <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
-          <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+          <p>Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
           <button type="button" name="button">Lire l'article</button>
         </article>
         <article class="article">
           <h1>Des musiques pour chiller en toute tranquilité</h1>
           <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
-          <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+          <p>Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
+          <button type="button" name="button">Lire l'article</button>
+        </article>
+        <article class="article">
+          <h1>Un noël à New-York</h1>
+          <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
+          <p>« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
+
+          <p>Tu retrouveras ici un mélange de bons plans, expériences, conseils tout cela avec du texte, des photos et vidéos. En espérant que j’arrive à te transmettre l’ambiance noëlesque ci particulière durant cette semaine de folie dans la grosse pomme ! Enjoy <3</p>
           <button type="button" name="button">Lire l'article</button>
         </article>
       </section>
