--- a/theme/index.html
+++ b/theme/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Just a couple things</title>
-    <link rel="stylesheet" href="css/knacss.css">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <!-- /////////////////////////////////////////////////////
-            HEADER
-    ///////////////////////////////////////////////////// -->
-    <header>
+<head>
+  <meta charset="utf-8">
+  <title>Just a couple things</title>
+  <link rel="stylesheet" href="css/knacss.css">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <!-- /////////////////////////////////////////////////////
+  HEADER
+  ///////////////////////////////////////////////////// -->
+  <header>
+    <div class="container">
       <h1>Just a couple things</h1>
       <nav>
         <ul>
@@ -23,153 +24,207 @@
           <li>À propos</li>
         </ul>
       </nav>
-    </header>
+    </div>
+  </header>
 
-    <main>
-      <!-- /////////////////////////////////////////////////////
-              A LA UNE
-      ///////////////////////////////////////////////////// -->
-      <section id="alaune">
+  <main>
+    <!-- /////////////////////////////////////////////////////
+    A LA UNE
+    ///////////////////////////////////////////////////// -->
+    <section id="alaune">
+      <div class="container">
         <article class="big">
+          <img src="image.png" alt="Image">
           <h1>Un repas de fête vegan</h1>
           <p class="date">21 janvier 2018 | 2 commentaires</p>
           <button type="button" name="button">Lire l'article</button>
-        </article>
+        </article></div>
       </section>
 
       <!-- /////////////////////////////////////////////////////
-              CATEGORIES
+      CATEGORIES
       ///////////////////////////////////////////////////// -->
       <section id="categories">
-
-        <!-- Culturez-moi -->
-        <div class="cat">
-          <div class="intro">
-            <h3>Culturez-moi</h3>
-            <p class="desc">
-              La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
-            </p>
+        <div class="container">
+          <!-- Culturez-moi -->
+          <div class="cat">
+            <div class="intro">
+              <h3>Culturez-moi</h3>
+              <p class="desc">
+                La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
+              </p>
+            </div>
+            <article class="cat-big">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>5 séries feel good parfaites pour décompresser</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <article class="cat-sm">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Atlanta, la douce pêche</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <article class="cat-sm">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Un week-end, huit films</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <button type="button" name="button">Découvrir plus</button>
           </div>
-          <article class="cat-big">
-            <h1>5 séries feel good parfaites pour décompresser</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <article class="cat-sm">
-            <h1>Atlanta, la douce pêche</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <article class="cat-sm">
-            <h1>Un week-end, huit films</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <button type="button" name="button">Découvrir plus</button>
-        </div>
 
-        <!-- Culturez-moi -->
-        <div class="cat">
-          <div class="intro">
-            <h3>Enfants de l'internet</h3>
-            <p class="desc">
-              Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
-            </p>
+          <!-- Culturez-moi -->
+          <div class="cat">
+            <div class="intro">
+              <h3>Enfants de l'internet</h3>
+              <p class="desc">
+                Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
+              </p>
+            </div>
+            <article class="cat-big">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Ces 7 applis indispensables au quotidien</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <article class="cat-sm">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Ces chaînes Youtube féministes que j'adore</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <button type="button" name="button">Découvrir plus</button>
           </div>
-          <article class="cat-big">
-            <h1>Ces 7 applis indispensables au quotidien</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <article class="cat-sm">
-            <h1>Ces chaînes Youtube féministes que j'adore</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <button type="button" name="button">Découvrir plus</button>
-        </div>
 
-        <!-- Lifestyle -->
-        <div class="cat">
-          <div class="intro">
-            <h3>Lifestyle</h3>
-            <p class="desc">
-              Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
-            </p>
+          <!-- Lifestyle -->
+          <div class="cat">
+            <div class="intro">
+              <h3>Lifestyle</h3>
+              <p class="desc">
+                Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
+              </p>
+            </div>
+            <article class="cat-big">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Un repas de fête vegan</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <article class="cat-sm">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Des musiques pour chiller en toute tranquilité</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <article class="cat-sm">
+              <img src="image.png" alt="Image">
+              <div class="content">
+                <h1>Miracle Morning, mon avis</h1>
+                <p class="date">12 novembre 2017 | 0 commentaire</p>
+              </div>
+            </article>
+            <button type="button" name="button">Découvrir plus</button>
           </div>
-          <article class="cat-big">
-            <h1>Un repas de fête vegan</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <article class="cat-sm">
-            <h1>Des musiques pour chiller en toute tranquilité</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <article class="cat-sm">
-            <h1>Miracle Morning, mon avis</h1>
-            <p class="date">12 novembre 2017 | 0 commentaire</p>
-          </article>
-          <button type="button" name="button">Découvrir plus</button>
         </div>
       </section>
 
       <!-- Wanderlust -->
       <section id="wanderlust">
-        <div class="intro">
-          <h2>Wanderlust</h2>
-          <p class="desc">
-            Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
-          </p>
+        <div class="container">
+          <div class="intro">
+            <h2>Wanderlust</h2>
+            <p class="desc">
+              Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
+            </p>
+          </div>
+          <article class="wanderlust">
+            <img src="image.png" alt="Image">
+            <div class="content">
+              <h1>Un automne au Québec</h1>
+            </div>
+          </article>
+          <article class="wanderlust">
+            <img src="image.png" alt="Image">
+            <div class="content">
+              <h1>Roadtrip à l'Est</h1>
+              <ul>
+                <li><h3>Partie 1 : Allemagne nous voilà</h3></li>
+                <li><h3>Partie 2 : No Kangaroo in Austria</h3></li>
+                <li><h3>Partie 3 : La Slovénie ? On dit oui !</h3></li>
+                <li><h3>Partie 4 : Vérone et Annecy</h3></li>
+              </ul>
+            </div>
+          </article>
+          <button type="button" name="button">Découvrir plus</button>
         </div>
-        <article class="wanderlust">
-          <h1>Un automne au Québec</h1>
-        </article>
-        <article class="wanderlust">
-          <h1>Roadtrip à l'Est</h1>
-          <ul>
-            <li><h3>Partie 1 : Allemagne nous voilà</h3></li>
-            <li><h3>Partie 2 : No Kangaroo in Austria</h3></li>
-            <li><h3>Partie 3 : La Slovénie ? On dit oui !</h3></li>
-            <li><h3>Partie 4 : Vérone et Annecy</h3></li>
-          </ul>
-        </article>
-        <button type="button" name="button">Découvrir plus</button>
       </section>
 
-      <!-- /////////////////////////////////////////////////////
-              TOUS LES ARTICLES
-      ///////////////////////////////////////////////////// -->
-      <section id="all-articles">
-        <h2>Tous les articles</h2>
-        <article class="article">
-          <h1>5 séries feel good parfaites pour décompresser</h1>
-          <p class="date">Culturez-moi | 21 janvier 2018 | 2 commentaires</p>
-          <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
-          <button type="button" name="button">Lire l'article</button>
-        </article>
-        <article class="article">
-          <h1>Un repas de fête vegan</h1>
-          <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
-          <p>Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
-          <button type="button" name="button">Lire l'article</button>
-        </article>
-        <article class="article">
-          <h1>Des musiques pour chiller en toute tranquilité</h1>
-          <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
-          <p>Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
-          <button type="button" name="button">Lire l'article</button>
-        </article>
-        <article class="article">
-          <h1>Un noël à New-York</h1>
-          <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
-          <p>« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
+      <section id="second-level">
+        <div class="container">
+          <!-- /////////////////////////////////////////////////////
+          TOUS LES ARTICLES
+          ///////////////////////////////////////////////////// -->
 
-          <p>Tu retrouveras ici un mélange de bons plans, expériences, conseils tout cela avec du texte, des photos et vidéos. En espérant que j’arrive à te transmettre l’ambiance noëlesque ci particulière durant cette semaine de folie dans la grosse pomme ! Enjoy <3</p>
-          <button type="button" name="button">Lire l'article</button>
-        </article>
+          <div id="all-articles">
+            <h2>Tous les articles</h2>
+            <article class="article">
+              <img src="image.png" alt="Image">
+              <h1>5 séries feel good parfaites pour décompresser</h1>
+              <p class="date">Culturez-moi | 21 janvier 2018 | 2 commentaires</p>
+              <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+              <button type="button" name="button">Lire l'article</button>
+            </article>
+            <article class="article">
+              <img src="image.png" alt="Image">
+              <h1>Un repas de fête vegan</h1>
+              <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
+              <p>Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
+              <button type="button" name="button">Lire l'article</button>
+            </article>
+            <article class="article">
+              <img src="image.png" alt="Image">
+              <h1>Des musiques pour chiller en toute tranquilité</h1>
+              <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
+              <p>Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
+              <button type="button" name="button">Lire l'article</button>
+            </article>
+            <article class="article">
+              <img src="image.png" alt="Image">
+              <h1>Un noël à New-York</h1>
+              <p class="date">Lifestyle | 21 janvier 2018 | 2 commentaires</p>
+              <p>« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
+
+              <p>Tu retrouveras ici un mélange de bons plans, expériences, conseils tout cela avec du texte, des photos et vidéos. En espérant que j’arrive à te transmettre l’ambiance noëlesque ci particulière durant cette semaine de folie dans la grosse pomme ! Enjoy <3</p>
+              <button type="button" name="button">Lire l'article</button>
+            </article>
+          </div>
+          <aside>
+            <div id="bio">
+              <h3>Biographie</h3>
+            </div>
+            <div id="instagram">
+              <h3>Suivez-nous sur Instagram</h3>
+            </div>
+          </aside>
+
+        </div>
       </section>
-      <aside class="bio">
-        <h3>Biographie</h3>
-      </aside>
-      <aside class="instagram">
-        <h3>Suivez-nous sur Instagram</h3>
-      </aside>
+
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <h2>Ceci est un footer</h2>
+
+      </div>
+    </footer>
   </body>
-</html>
+  </html>
