3 colonnes sur alaune

--- a/theme/index.html
+++ b/theme/index.html
@@ -35,11 +35,14 @@
       <div class="container">
         <article class="big">
           <img src="image.png" alt="Image">
-          <h1>Un repas de fête vegan</h1>
-          <p class="date">21 janvier 2018 | 2 commentaires</p>
-          <button type="button" name="button">Lire l'article</button>
-        </article></div>
-      </section>
+          <div class="content">
+            <h1>Un repas de fête vegan</h1>
+            <p class="date">21 janvier 2018 | 2 commentaires</p>
+            <button type="button" name="button">Lire l'article</button>
+          </div>
+        </article>
+      </div>
+    </section>
 
       <!-- /////////////////////////////////////////////////////
       CATEGORIES
