--- a/theme/index.html
+++ b/theme/index.html
@@ -36,6 +36,7 @@
         <article class="big">
           <img src="image.png" alt="Image">
           <div class="content">
+            <p class="date">Lifestyle</p>
             <h1>Un repas de fête vegan</h1>
             <p class="date">21 janvier 2018 | 2 commentaires</p>
             <button type="button" name="button">Lire l'article</button>
