--- a/theme/index.html
+++ b/theme/index.html
@@ -20,6 +20,7 @@
           <li>Culturez-moi</li>
           <li>Enfants de l'internet</li>
           <li>Lifestyle</li>
+          <li>Foodie</li>
           <li>Contactez-nous</li>
           <li>À propos</li>
         </ul>
@@ -36,110 +37,14 @@
         <article class="big">
           <img src="image.png" alt="Image">
           <div class="content">
-            <p class="date">Lifestyle</p>
+            <p class="date"><a href="">Lifestyle</a> | 21 janvier 2018 | 2 commentaires</p>
             <h1>Un repas de fête vegan</h1>
-            <p class="date">21 janvier 2018 | 2 commentaires</p>
+            <p>Bien le bonjour toi ! Aujourd’hui je débarque dans le section make up pour te parler de la marque Zao. Laisse moi te convraincre en 4 mots de te pencher sur cette jolie compagnie : naturel, bio, vegan et rechargeable.</p>
             <button type="button" name="button">Lire l'article</button>
           </div>
         </article>
       </div>
     </section>
-
-      <!-- /////////////////////////////////////////////////////
-      CATEGORIES
-      ///////////////////////////////////////////////////// -->
-      <section id="categories">
-        <div class="container">
-          <!-- Culturez-moi -->
-          <div class="cat">
-            <div class="intro">
-              <h3>Culturez-moi</h3>
-              <p class="desc">
-                La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
-              </p>
-            </div>
-            <article class="cat-big">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>5 séries feel good parfaites pour décompresser</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <article class="cat-sm">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Atlanta, la douce pêche</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <article class="cat-sm">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Un week-end, huit films</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <button type="button" name="button">Découvrir plus</button>
-          </div>
-
-          <!-- Culturez-moi -->
-          <div class="cat">
-            <div class="intro">
-              <h3>Enfants de l'internet</h3>
-              <p class="desc">
-                Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
-              </p>
-            </div>
-            <article class="cat-big">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Ces 7 applis indispensables au quotidien</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <article class="cat-sm">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Ces chaînes Youtube féministes que j'adore</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <button type="button" name="button">Découvrir plus</button>
-          </div>
-
-          <!-- Lifestyle -->
-          <div class="cat">
-            <div class="intro">
-              <h3>Lifestyle</h3>
-              <p class="desc">
-                Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
-              </p>
-            </div>
-            <article class="cat-big">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Un repas de fête vegan</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <article class="cat-sm">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Des musiques pour chiller en toute tranquilité</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <article class="cat-sm">
-              <img src="image.png" alt="Image">
-              <div class="content">
-                <h1>Miracle Morning, mon avis</h1>
-                <p class="date">12 novembre 2017 | 0 commentaire</p>
-              </div>
-            </article>
-            <button type="button" name="button">Découvrir plus</button>
-          </div>
-        </div>
-      </section>
 
       <!-- Wanderlust -->
       <section id="wanderlust">
@@ -223,7 +128,86 @@
         </div>
       </section>
 
+
+            <!-- /////////////////////////////////////////////////////
+            CATEGORIES
+            ///////////////////////////////////////////////////// -->
+            <section id="categories">
+              <div class="container">
+                <!-- Culturez-moi -->
+                <div class="cat">
+                  <div class="intro">
+                    <h3>Culturez-moi</h3>
+                    <p class="desc">
+                      La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
+                    </p>
+                  </div>
+                  <article class="cat-big">
+                    <img src="image.png" alt="Image">
+                    <div class="content">
+                      <h1>5 séries feel good parfaites pour décompresser</h1>
+                      <p class="date">12 novembre 2017 | 0 commentaire</p>
+                    </div>
+                  </article>
+                </div>
+
+                <!-- Culturez-moi -->
+                <div class="cat">
+                  <div class="intro">
+                    <h3>Enfants de l'internet</h3>
+                    <p class="desc">
+                      Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
+                    </p>
+                  </div>
+                  <article class="cat-big">
+                    <img src="image.png" alt="Image">
+                    <div class="content">
+                      <h1>Ces 7 applis indispensables au quotidien</h1>
+                      <p class="date">12 novembre 2017 | 0 commentaire</p>
+                    </div>
+                  </article>
+                </div>
+
+                <!-- Lifestyle -->
+                <div class="cat">
+                  <div class="intro">
+                    <h3>Lifestyle</h3>
+                    <p class="desc">
+                      Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
+                    </p>
+                  </div>
+                  <article class="cat-big">
+                    <img src="image.png" alt="Image">
+                    <div class="content">
+                      <h1>Un repas de fête vegan</h1>
+                      <p class="date">12 novembre 2017 | 0 commentaire</p>
+                    </div>
+                  </article>
+                </div>
+
+                <!-- Foodie -->
+                <div class="cat">
+                  <div class="intro">
+                    <h3>Foodie</h3>
+                    <p class="desc">
+                      Manger : voilà un mot que tout le monde aime. Allez, bon appétit !
+                    </p>
+                  </div>
+                  <article class="cat-big">
+                    <img src="image.png" alt="Image">
+                    <div class="content">
+                      <h1>Un repas de fête vegan</h1>
+                      <p class="date">12 novembre 2017 | 0 commentaire</p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+
+
+            </div>
+            </section>
     </main>
+
     <footer>
       <div class="container">
         <h2>Ceci est un footer</h2>
