--- a/theme/index.html
+++ b/theme/index.html
@@ -10,21 +10,22 @@
   <!-- /////////////////////////////////////////////////////
   HEADER
   ///////////////////////////////////////////////////// -->
+  <nav>
+    <ul class="container">
+      <li class="selected">Accueil</li>
+      <li>Wanderlust</li>
+      <li>Culturez-moi</li>
+      <li>Enfants de l'internet</li>
+      <li>Lifestyle</li>
+      <li>Foodie</li>
+      <li>à propos</li>
+      <li>Contactez-nous</li>
+    </ul>
+  </nav>
   <header>
     <div class="container">
       <h1>Just a couple things</h1>
-      <nav>
-        <ul>
-          <li>Accueil</li>
-          <li>Wanderlust</li>
-          <li>Culturez-moi</li>
-          <li>Enfants de l'internet</li>
-          <li>Lifestyle</li>
-          <li>Foodie</li>
-          <li>Contactez-nous</li>
-          <li>À propos</li>
-        </ul>
-      </nav>
+      <p>Le blog qui te fait découvrir<br /><em><strong>quelques</strong></em> trucs</p>
     </div>
   </header>
 
