--- a/theme/index.html
+++ b/theme/index.html
@@ -39,7 +39,7 @@
           <img src="image.png" alt="Image">
           <div class="content">
             <p class="date"><a href="">Lifestyle</a> | 21 janvier 2018 | 2 commentaires</p>
-            <h1>Un repas de fête vegan</h1>
+            <h1>Test de la marque de maquillage Zao</h1>
             <p>Bien le bonjour toi ! Aujourd’hui je débarque dans le section make up pour te parler de la marque Zao. Laisse moi te convraincre en 4 mots de te pencher sur cette jolie compagnie : naturel, bio, vegan et rechargeable.</p>
             <button type="button" name="button">Lire l'article</button>
           </div>
