début wanderlust + réglages précédentes partis

--- a/theme/index.html
+++ b/theme/index.html
@@ -11,16 +11,22 @@
   HEADER
   ///////////////////////////////////////////////////// -->
   <nav>
-    <ul class="container">
-      <li class="selected">Accueil</li>
-      <li>Wanderlust</li>
-      <li>Culturez-moi</li>
-      <li>Enfants de l'internet</li>
-      <li>Lifestyle</li>
-      <li>Foodie</li>
-      <li>à propos</li>
-      <li>Contactez-nous</li>
-    </ul>
+    <div class="container">
+      <ul class="primaryNav">
+        <li class="selected">Accueil</li>
+        <li>Travel</li>
+        <li>Lifestyle</li>
+        <li>Culturez-moi</li>
+        <li>Enfants de l'internet</li>
+        <li>Foodie</li>
+      </ul>
+      <ul class="secondaryNav">
+        <li>à propos</li>
+        <li>Contact</li>
+        <li>In</li>
+      </ul>
+    </div>
+
   </nav>
   <header>
     <div class="container">
@@ -35,6 +41,7 @@
     ///////////////////////////////////////////////////// -->
     <section id="alaune">
       <div class="container">
+        <p class="surtitre">à la une</p>
         <article class="big">
           <img src="image.png" alt="Image">
           <div class="content">
