--- a/theme/index.html
+++ b/theme/index.html
@@ -90,9 +90,9 @@
           <!-- /////////////////////////////////////////////////////
           TOUS LES ARTICLES
           ///////////////////////////////////////////////////// -->
+          <p class="surtitre">Tous les articles</p>
 
           <div id="all-articles">
-            <h2>Tous les articles</h2>
             <article class="article">
               <img src="image.png" alt="Image">
               <h1>5 séries feel good parfaites pour décompresser</h1>
@@ -124,15 +124,6 @@
               <button type="button" name="button">Lire l'article</button>
             </article>
           </div>
-          <aside>
-            <div id="bio">
-              <h3>Biographie</h3>
-            </div>
-            <div id="instagram">
-              <h3>Suivez-nous sur Instagram</h3>
-            </div>
-          </aside>
-
         </div>
       </section>
 
