--- a/theme/index.html
+++ b/theme/index.html
@@ -61,12 +61,7 @@
               Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
             </p>
           </div>
-          <article class="wanderlust">
-            <img src="image.png" alt="Image">
-            <div class="content">
-              <h1>Un automne au Québec</h1>
-            </div>
-          </article>
+          
           <article class="wanderlust">
             <img src="image.png" alt="Image">
             <div class="content">
@@ -93,29 +88,36 @@
           <div id="all-articles">
             <article class="article">
               <img src="image.png" alt="Image">
-              <h1>5 séries feel good parfaites pour décompresser</h1>
-              <p class="date"><a href="#">Culturez-moi</a><br />21 janvier 2018 | 2 commentaires</p>
+              <div class="align-bottom">
+                <h1>5 séries feel good parfaites pour décompresser</h1>
+                <p class="date"><a href="#">Culturez-moi</a><br />21 janvier 2018 | 2 commentaires</p>
+              </div>
               <p class="chapo">Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
               <button type="button" name="button">Lire l'article</button>
             </article>
             <article class="article">
               <img src="image.png" alt="Image">
-              <h1>Un repas de fête vegan</h1>
-              <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+              <div class="align-bottom">
+                <h1>Un repas de fête vegan</h1>
+                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+              </div>
               <p class="chapo">Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
               <button type="button" name="button">Lire l'article</button>
             </article>
             <article class="article">
-              <img src="image.png" alt="Image">
-              <h1>Des musiques pour chiller en toute tranquilité</h1>
-              <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+              <img src="image.png" alt="Image"><div class="align-bottom">
+                <h1>Des musiques pour chiller en toute tranquilité</h1>
+                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+              </div>
               <p class="chapo">Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
               <button type="button" name="button">Lire l'article</button>
             </article>
             <article class="article">
               <img src="image.png" alt="Image">
-              <h1>Un noël à New-York</h1>
-              <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+              <div class="align-bottom">
+                <h1>Un noël à New-York</h1>
+                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+              </div>
               <p class="chapo">« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
               <button type="button" name="button">Lire l'article</button>
             </article>
