--- a/theme/index.html
+++ b/theme/index.html
@@ -131,16 +131,20 @@
         <!-- Culturez-moi -->
         <div class="cat">
           <div class="intro">
+            <p class="surtitre">Dernier article</p>
             <h3>Culturez-moi</h3>
             <p class="desc">
               La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
             </p>
+            <hr>
           </div>
           <article class="cat-big">
             <img src="image.png" alt="Image">
             <div class="content">
-              <h1>5 séries feel good parfaites pour décompresser</h1>
               <p class="date">12 novembre 2017 | 0 commentaire</p>
+              <h1>5 séries feel good parfaites pour décompresser</h1>
+              <p>Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment.</p>
+              <button type="button" name="button">Lire l'article</button>
             </div>
           </article>
         </div>
@@ -148,16 +152,20 @@
         <!-- Culturez-moi -->
         <div class="cat">
           <div class="intro">
+            <p class="surtitre">Dernier article</p>
             <h3>Enfants de l'internet</h3>
             <p class="desc">
               Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
             </p>
+            <hr>
           </div>
           <article class="cat-big">
             <img src="image.png" alt="Image">
             <div class="content">
-              <h1>Ces 7 applis indispensables au quotidien</h1>
               <p class="date">12 novembre 2017 | 0 commentaire</p>
+              <h1>Ces 7 applis indispensables au quotidien</h1>
+              <p>Hello les amis ! Aujourd’hui je vais vous parler de ces applications smartphone qui me sauvent la vie quotidiennement. Bon j’avoue, sauver la vie j’exagère un peu mais 3 fois rien…</p>
+              <button type="button" name="button">Lire l'article</button>
             </div>
           </article>
         </div>
@@ -165,16 +173,20 @@
         <!-- Lifestyle -->
         <div class="cat">
           <div class="intro">
+            <p class="surtitre">Dernier article</p>
             <h3>Lifestyle</h3>
             <p class="desc">
               Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
             </p>
+            <hr>
           </div>
           <article class="cat-big">
             <img src="image.png" alt="Image">
             <div class="content">
-              <h1>Un repas de fête vegan</h1>
               <p class="date">12 novembre 2017 | 0 commentaire</p>
+              <h1>Un repas de fête vegan</h1>
+              <p>Hello hello joli monde ! Aujourd'hui je me lance dans le test de cosmétique bio et pour commencer je ne m'attaque pas à n'importe quelle marque mais bel et bien à l'étoile montante de la cosmétique naturelle</p>
+              <button type="button" name="button">Lire l'article</button>
             </div>
           </article>
         </div>
@@ -182,16 +194,20 @@
         <!-- Foodie -->
         <div class="cat">
           <div class="intro">
+            <p class="surtitre">Dernier article</p>
             <h3>Foodie</h3>
             <p class="desc">
               Manger : voilà un mot que tout le monde aime. Allez, bon appétit !
             </p>
+            <hr>
           </div>
           <article class="cat-big">
             <img src="image.png" alt="Image">
             <div class="content">
-              <h1>Un repas de fête vegan</h1>
               <p class="date">12 novembre 2017 | 0 commentaire</p>
+              <h1>Un repas de fête vegan</h1>
+              <p>Hello, hello ! Aujourd'hui je reviens avec 2 recettes végé de saison tellement simples et plutôt pas mal (ça va les chevilles Léa, pas trop gonflées ?) C’est un petit défi que j’ai relevé avec un panier de Potimarron. </p>
+              <button type="button" name="button">Lire l'article</button>
             </div>
           </article>
         </div>
