start responsive for alaune and travel

--- a/theme/index.html
+++ b/theme/index.html
@@ -45,11 +45,15 @@
         <div class="container">
           <p class="surtitre">à la une</p>
           <article class="big">
-            <img src="image.png" alt="Image">
+            <div class="image">
+              <img src="image.png" alt="Image" class="img-article">
+            </div>
             <p class="date"><a href="">Lifestyle</a> | 21 janvier 2018 | 2 commentaires</p>
             <h1>Test de la marque de maquillage Zao</h1>
-            <p class="chapo">Bien le bonjour toi ! Aujourd’hui je débarque dans le section make up pour te parler de la marque Zao. Laisse moi te convraincre en 4 mots de te pencher sur cette jolie compagnie : naturel, bio, vegan et rechargeable.</p>
-            <button type="button" name="button">Lire l'article</button>
+            <p class="chapo">
+              Bien le bonjour toi ! Aujourd’hui je débarque dans le section make up pour te parler de la marque Zao. Laisse moi te convraincre en 4 mots de te pencher sur cette jolie compagnie : naturel, bio, vegan et rechargeable.
+              <button type="button" name="button">Lire l'article</button>
+            </p>
           </article>
         </div>
       </section>
@@ -57,7 +61,7 @@
       <!-- Travel -->
       <section id="travel">
         <div class="container">
-          <h2>Travel</h2>
+          <h1>Travel</h1>
           <p class="desc">
             Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
           </p>
@@ -86,7 +90,7 @@
 
           <div id="all-articles">
             <article class="article">
-              <img src="image-sq.png" alt="Image">
+              <img src="image-sq.png" alt="Image"  class="img-article">
               <div class="align-bottom">
                 <h1>5 séries feel good parfaites pour décompresser</h1>
                 <p class="date"><a href="#">Culturez-moi</a><br />21 janvier 2018 | 2 commentaires</p>
@@ -95,7 +99,7 @@
               <button type="button" name="button">Lire l'article</button>
             </article>
             <article class="article">
-              <img src="image-sq.png" alt="Image">
+              <img src="image-sq.png" alt="Image" class="img-article">
               <div class="align-bottom">
                 <h1>Un repas de fête vegan</h1>
                 <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
@@ -104,7 +108,7 @@
               <button type="button" name="button">Lire l'article</button>
             </article>
             <article class="article">
-              <img src="image-sq.png" alt="Image"><div class="align-bottom">
+              <img src="image-sq.png" alt="Image" class="img-article"><div class="align-bottom">
                 <h1>Des musiques pour chiller en toute tranquilité</h1>
                 <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
               </div>
@@ -112,7 +116,7 @@
               <button type="button" name="button">Lire l'article</button>
             </article>
             <article class="article">
-              <img src="image-sq.png" alt="Image">
+              <img src="image-sq.png" alt="Image" class="img-article">
               <div class="align-bottom">
                 <h1>Un noël à New-York</h1>
                 <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
@@ -141,7 +145,7 @@
               <hr>
             </div>
             <article class="cat-big">
-              <img src="image.png" alt="Image">
+              <img src="image.png" alt="Image" class="img-article">
               <div class="content">
                 <p class="date">12 novembre 2017 | 0 commentaire</p>
                 <h1>5 séries feel good parfaites pour décompresser</h1>
@@ -162,7 +166,7 @@
               <hr>
             </div>
             <article class="cat-big">
-              <img src="image.png" alt="Image">
+              <img src="image.png" alt="Image" class="img-article">
               <div class="content">
                 <p class="date">12 novembre 2017 | 0 commentaire</p>
                 <h1>Ces 7 applis indispensables au quotidien</h1>
@@ -183,7 +187,7 @@
               <hr>
             </div>
             <article class="cat-big">
-              <img src="image.png" alt="Image">
+              <img src="image.png" alt="Image" class="img-article">
               <div class="content">
                 <p class="date">12 novembre 2017 | 0 commentaire</p>
                 <h1>Un repas de fête vegan</h1>
@@ -204,7 +208,7 @@
               <hr>
             </div>
             <article class="cat-big">
-              <img src="image.png" alt="Image">
+              <img src="image.png" alt="Image" class="img-article">
               <div class="content">
                 <p class="date">12 novembre 2017 | 0 commentaire</p>
                 <h1>Un repas de fête vegan</h1>
