fix hover articles + responsive latest articles

--- a/theme/index.html
+++ b/theme/index.html
@@ -44,17 +44,19 @@
       <section id="alaune">
         <div class="container">
           <p class="surtitre">à la une</p>
+          <a href="" class="link-article">
           <article class="big">
             <div class="image">
               <img src="image.png" alt="Image" class="img-article">
             </div>
-            <p class="date"><a href="">Lifestyle</a> | 21 janvier 2018 | 2 commentaires</p>
+            <p class="date"><span class="categorie">Lifestyle</span> | 21 janvier 2018 | 2 commentaires</p>
             <h1>Test de la marque de maquillage Zao</h1>
             <p class="chapo">
               Bien le bonjour toi ! Aujourd’hui je débarque dans le section make up pour te parler de la marque Zao. Laisse moi te convraincre en 4 mots de te pencher sur cette jolie compagnie : naturel, bio, vegan et rechargeable.
               <button type="button" name="button">Lire l'article</button>
             </p>
           </article>
+          </a>
         </div>
       </section>
 
@@ -69,15 +71,19 @@
             <img src="map.png" alt="">
             <button type="button" name="button">Voir toutes les destinations</button>
           </div>
-          <article class="video">
+          <div class="second-col">
             <p class="surtitre">Dernière vidéo</p>
-            <img src="image.png" alt="Image">
-            <button type="button" name="button">Lire la vidéo</button>
-            <div class="content">
-              <h3>Un Noël à New-York</h3>
-              <p class="date">5:03 | 18 septembre 2018</p>
-            </div>
-          </article>
+            <a href="" class="link-article">
+              <article class="video">
+                <img src="image.png" alt="Image">
+                <button type="button" name="button">Lire la vidéo</button>
+                <div class="content">
+                  <h3>Un Noël à New-York</h3>
+                  <p class="date">5:03 | 18 septembre 2018</p>
+                </div>
+              </article>
+            </a>
+          </div>
         </div>
       </section>
 
@@ -89,41 +95,52 @@
           <p class="surtitre">Tous les articles</p>
 
           <div id="all-articles">
-            <article class="article">
-              <img src="image-sq.png" alt="Image"  class="img-article">
-              <div class="align-bottom">
-                <h1>5 séries feel good parfaites pour décompresser</h1>
-                <p class="date"><a href="#">Culturez-moi</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
-            <article class="article">
-              <img src="image-sq.png" alt="Image" class="img-article">
-              <div class="align-bottom">
-                <h1>Un repas de fête vegan</h1>
-                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
-            <article class="article">
-              <img src="image-sq.png" alt="Image" class="img-article"><div class="align-bottom">
-                <h1>Des musiques pour chiller en toute tranquilité</h1>
-                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
-            <article class="article">
-              <img src="image-sq.png" alt="Image" class="img-article">
-              <div class="align-bottom">
-                <h1>Un noël à New-York</h1>
-                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
+            <a href="" class="link-article">
+              <article class="article">
+                <img src="image-sq.png" alt="Image"  class="img-article">
+                <div class="align-bottom">
+                  <h1>5 séries feel good parfaites pour décompresser</h1>
+                  <p class="date"><span class="categorie">Culturez-moi</span><br />21 janvier 2018<br />2 commentaires</p>
+                </div>
+                <p class="chapo">Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+                <button type="button" name="button">Lire l'article</button>
+              </article>
+            </a>
+
+            <a href="" class="link-article">
+              <article class="article">
+                <img src="image-sq.png" alt="Image" class="img-article">
+                <div class="align-bottom">
+                  <h1>Un repas de fête vegan</h1>
+                  <p class="date"><span class="categorie">Lifestyle</span><br />21 janvier 2018<br />2 commentaires</p>
+                </div>
+                <p class="chapo">Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
+                <button type="button" name="button">Lire l'article</button>
+              </article>
+            </a>
+
+            <a href="" class="link-article">
+              <article class="article">
+                <img src="image-sq.png" alt="Image" class="img-article"><div class="align-bottom">
+                  <h1>Des musiques pour chiller en toute tranquilité</h1>
+                  <p class="date"><span class="categorie">Lifestyle</span><br />21 janvier 2018<br />2 commentaires</p>
+                </div>
+                <p class="chapo">Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
+                <button type="button" name="button">Lire l'article</button>
+              </article>
+            </a>
+
+            <a href="" class="link-article">
+              <article class="article">
+                <img src="image-sq.png" alt="Image" class="img-article">
+                <div class="align-bottom">
+                  <h1>Un noël à New-York</h1>
+                  <p class="date"><span class="categorie">Lifestyle</span><br />21 janvier 2018<br />2 commentaires</p>
+                </div>
+                <p class="chapo">« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
+                <button type="button" name="button">Lire l'article</button>
+              </article>
+            </a>
           </div>
         </div>
       </section>
