--- a/theme/index.html
+++ b/theme/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1">
   <title>Just a couple things</title>
   <link rel="stylesheet" href="css/knacss.css">
   <link rel="stylesheet" href="css/main.css">
