--- a/theme/index.html
+++ b/theme/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="device-width">
   <title>Just a couple things</title>
-  <link rel="stylesheet" href="css/knacss.css">
+  <!-- <link rel="stylesheet" href="css/knacss.css"> -->
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
