--- a/theme/index.html
+++ b/theme/index.html
@@ -15,6 +15,10 @@
     ///////////////////////////////////////////////////// -->
     <nav>
       <div class="container">
+        <div class="menuTop">
+          <span class="icon">Close</span>
+          <p class="surtitre">Menu</p>
+        </div>
         <ul class="primaryNav">
           <li class="selected">Accueil</li>
           <li>Travel</li>
