--- a/theme/index.html
+++ b/theme/index.html
@@ -13,7 +13,7 @@
     <!-- /////////////////////////////////////////////////////
     HEADER
     ///////////////////////////////////////////////////// -->
-    <nav>
+    <nav class="nav">
       <div class="container">
         <div class="menuTop">
           <span class="icon">Close</span>
@@ -35,7 +35,7 @@
       </div>
 
     </nav>
-    <header>
+    <header id="header">
       <div class="container">
         <h1>Just a couple things</h1>
         <p>Le blog qui te fait découvrir<br /><em><strong>quelques</strong></em> trucs</p>
@@ -291,4 +291,6 @@
   </div>
 </body>
 
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/main.js"></script>
 </html>
