start creating scss partials (still in test)

--- a/theme/index.html
+++ b/theme/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Just a couple things</title>
-  <link rel="stylesheet" href="css/knacss.css">
-  <link rel="stylesheet" href="css/main.css">
+  <!-- <link rel="stylesheet" href="css/knacss.css"> -->
+  <link rel="stylesheet" href="css/main2.css">
 </head>
 <body>
   <div class="wrapper">
