--- a/index.html
+++ b/index.html
@@ -1,7 +1,83 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<html lang="fr" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>CV de Delphin Hauchard</title>
+  </head>
+  <body>
+    <header>
+      <h1>Delphin Hauchard</h1>
+      <p>designer de produits numériques</p>
+    </header>
+    <section>
+      <p>Je réalise des produits éditoriaux pour des médias et des interfaces web et mobile. Mon objectif est que l’information soit mise en valeur et accessible.</p>
+      <p>Je suis sensible aux notions de liberté et d’autonomie. À travers mon travail, je cherche à répondre à vos problématiques avec honnêteté, intégrité et inclusivité.</p>
+      <ul>
+        <li>delphin@hauchard.fr</li>
+        <li>delphin.design</li>
+        <li>06 22 21 87 63</li>
+        <li>Paris et Rouen</li>
+      </ul>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Expériences</h2>
+      <article>
+        <h3>Télérama</h3>
+        <p>
+          <strong>Designer UI</strong><br />
+          <em>octobre 2018 - juillet 2019</em>
+        </p>
+        <p>Réalisation de l’interface de la nouvelle app Télérama et des nouvelles fiches programme du site Télérama.fr</p>
+      </article>
+      <article>
+        <h3>Citizen Press</h3>
+        <p>
+          <strong>Designer</strong><br />
+          <em>octobre 2017 - octobre 2018</em>
+        </p>
+        <p>Refonte du site web de l’Ordre des médecins (design responsif) et de l’Afometra (organisme de formation). Créations de newsletters de minisites divers. Conseils sur des formats éditoriaux innovants (stories, réseaux sociaux).</p>
+      </article>
+      <article>
+        <h3>Projet de diplôme</h3>
+        <p>
+          <strong>Designer chercheur</strong><br />
+          <em>2016 - 2017</em>
+        </p>
+        <p>Mémoire sur le design d’infiltration et propositions de solutions pour lutter contre les fake news sur les réseaux sociaux.</p>
+      </article>
+      <article>
+        <h3>Le Figaro</h3>
+        <p>
+          <strong>Designer stagiaire</strong><br />
+          <em>mars - mai 2017</em>
+        </p>
+        <p>Création de visuels pour la communication numérique du groupe. Création de formats stories pour l’app du Figaro.</p>
+      </article>
+      <article>
+        <h3>Pole</h3>
+        <p>
+          <strong>Product designer alternant</strong><br />
+          <em>avril 2016 - janvier 2017</em>
+        </p>
+        <p>Création de l’application MyGreenCoach pour l’Oréal : conception du parcours utilisateur, création de l’interface. Conception de la nouvelle version de 90jours. Création de visuels divers.</p>
+      </article>
+      <article>
+        <h3>Week-ends créatifs</h3>
+        <p>
+          <strong>Designer / porteur de projet</strong><br />
+          <em>2014 - 2018</em>
+        </p>
+        <p>Participations en tant que designer à des Startup eek-ends, Museomix, hackathons et Medialab sessions.</p>
+      </article>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Formations</h2>
+    </section>
+  </body>
 </html>
